core: initialize caps filter to none.

Sync with the comment above telling the filter is to be initialized
to none.

Partially revert commit  5b88159eaa8d06a5f17c092cbb69b79e62d48f2b

The issue is that grl_upnp_source_get_caps set the search and browse
caps to FILTER_ALL if filtered is supported and do not touch them
otherwise. But grl_caps_new instantiate a caps with filter initalized to
FILTER_ALL ... so grl_upnp_source_get_caps always returns caps with
FILTER_ALL .

Fixes browse vs search for grilo plugin upnp at least against servers
that has no or incomplete search capabilities.

https://bugzilla.gnome.org/show_bug.cgi?id=709208